# eml-activation

./: .gitignore  MIGRATING.md  Makefile  PLAN.md  README.md  pyproject.toml  requirements.txt
configs/: charlm.yaml  charlm_cpu.yaml
data/: .gitignore
experiments/: charlm_transformer.py  expressivity_demo.py  multiseed.py
experiments/01_carc_baseline/: install_and_run.sh  run.sh
experiments/02_paper_sweep/: run.sh
paper/: SUBMISSION.md  neurips_2024.sty  paper.bbl  paper.tex  refs.bib
runs/: bench.csv
runs/emlglu/: config.json  loss.csv
runs/gelu/: config.json  loss.csv
runs/relu/: config.json  loss.csv
runs/swiglu/: config.json  loss.csv
runs_carc/: bench.csv
runs_carc/emlglu/: config.json  loss.csv
runs_carc/gelu/: config.json  loss.csv
runs_carc/relu/: config.json  loss.csv
runs_carc/swiglu/: config.json  loss.csv
scripts/: bench.py  train.py  viz.py
src/eml/: __init__.py  attention.py  expressivity.py  operator.py  transformer.py
src/eml_attn/: __init__.py  attention.py  data.py  ffn.py  model.py
src/eml_attn/ops/: __init__.py  eml.py
tests/: test_eml_op.py  test_ffn_shapes.py  test_operator.py
