[project]
name = "eml-activation"
version = "0.1.0"
description = "EML (exp-minus-log) as a transformer MLP activation — sanity check"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/eml_attn"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
